[gd_scene load_steps=5 format=3 uid="uid://odns7t6x8sks"]

[ext_resource type="Script" path="res://Scripts/End.gd" id="1_oj4yg"]
[ext_resource type="LabelSettings" uid="uid://cql7mn643wepi" path="res://Font/end_labels.tres" id="1_u8688"]
[ext_resource type="Texture2D" uid="uid://ct0kbwfrwn5ja" path="res://Textures/circle_pink.png" id="3_gnd3o"]
[ext_resource type="Texture2D" uid="uid://emqknvl088xg" path="res://Textures/arrow_blue.png" id="4_63kic"]

[node name="End" type="Node2D"]
script = ExtResource("1_oj4yg")

[node name="GradeLabel" type="Label" parent="."]
offset_left = 201.0
offset_top = 21.0
offset_right = 474.0
offset_bottom = 127.0
text = "Grade: "
label_settings = ExtResource("1_u8688")
horizontal_alignment = 2

[node name="GradeNumber" type="Label" parent="."]
offset_left = 481.0
offset_top = 24.0
offset_right = 619.0
offset_bottom = 130.0
text = "0"
label_settings = ExtResource("1_u8688")

[node name="FinalScore" type="Label" parent="."]
offset_left = 183.0
offset_top = 91.0
offset_right = 461.0
offset_bottom = 197.0
text = "Final Score:"
label_settings = ExtResource("1_u8688")
horizontal_alignment = 2

[node name="ScoreNumber" type="Label" parent="."]
offset_left = 484.0
offset_top = 94.0
offset_right = 578.0
offset_bottom = 200.0
text = "0"
label_settings = ExtResource("1_u8688")

[node name="MaxCombo" type="Label" parent="."]
offset_left = 184.0
offset_top = 168.0
offset_right = 462.0
offset_bottom = 274.0
text = "Max Combo:"
label_settings = ExtResource("1_u8688")
horizontal_alignment = 2

[node name="ComboNumber" type="Label" parent="."]
offset_left = 488.0
offset_top = 173.0
offset_right = 643.0
offset_bottom = 279.0
text = "0"
label_settings = ExtResource("1_u8688")

[node name="PlayAgain" type="Label" parent="."]
offset_left = 258.0
offset_top = 315.0
offset_right = 442.0
offset_bottom = 382.0
text = "Play again"
label_settings = ExtResource("1_u8688")

[node name="BackToMenu" type="Label" parent="."]
offset_left = 682.0
offset_top = 310.0
offset_right = 981.0
offset_bottom = 416.0
text = "Back to menu"
label_settings = ExtResource("1_u8688")

[node name="circle" type="Sprite2D" parent="."]
position = Vector2(389, 480)
scale = Vector2(0.821267, 0.821267)
texture = ExtResource("3_gnd3o")

[node name="up" type="Sprite2D" parent="."]
position = Vector2(840, 481)
scale = Vector2(0.771493, 0.771493)
texture = ExtResource("4_63kic")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
